<resources>
    <string name="app_name">Project F</string>

    <string name="Navi_profile_name">Mike</string>
    <string name="Navi_profile_email">mike.jung.global@gmail.com</string>

    <string name="Menu_list">영화 목록</string>
    <string name="Menu_api">영화 API</string>
    <string name="Menu_book">예매하기</string>
    <string name="Menu_setting">설정</string>
    <string name="Personal_setting">사용자 설정</string>

    <string name="View_more">상세보기</string>

    <string name="walls"> | </string>
    <string name="movie_list">영화 목록</string>
    <string name="view_more">상세보기</string>


    <string name="book">예매율</string>
    <string name="rate">평점</string>
    <string name="viewer_count">누적관객수</string>
    <string name="synopsys">줄거리</string>

    <string name="dir_act">감독/출연</string>
    <string name="dir">감독</string>
    <string name="act">출연</string>

    <string name="simple_review">한줄평</string>
    <string name="review_write">작성하기</string>
    <string name="see_all_review">모두 보기</string>
    <string name="go_to_reserv">예매하기</string>

    <string name="input_rating">평점을 입력해 주세요</string>
    <string name="under_100_please">100자 이내로 작성해주세요.</string>
    <string name="save">저 장</string>
    <string name="cancel">취 소</string>

</resources>