<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d3d3d3"
        android:orientation="vertical"
        tools:context=".activity.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/private_color"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/movieInfoPoster"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:paddingLeft="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingTop="60dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp">

                    <TextView
                        android:id="@+id/movieInfoName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/movieInfoGrade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_15" />
                </LinearLayout>

                <TextView
                    android:id="@+id/movieInfoDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/movieInfoGenre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/thumbUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_thumb_up"
                        android:clickable="true"
                        android:src="@drawable/ic_thumb_up" />

                    <TextView
                        android:id="@+id/goodCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="6dp"
                        android:textColor="#ffffff"
                        android:textSize="15dp"
                        android:textStyle="bold" />


                    <ImageView
                        android:id="@+id/thumbDown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_thumb_down"
                        android:clickable="true"
                        android:src="@drawable/ic_thumb_down" />

                    <TextView
                        android:id="@+id/badCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:textColor="#ffffff"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/book"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/movieInfoBookRank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingBottom="10dp"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movieInfoReviewRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/rate"
                    android:textSize="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp">

                    <RatingBar
                        android:id="@+id/movieInfoReviewRatingBar"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:numStars="5"
                        android:stepSize="0.1" />

                    <TextView
                        android:id="@+id/movieInfoReviewRateCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:textSize="13dp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/viewer_count" />

                <TextView
                    android:id="@+id/movieInfoViewerCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/synopsys"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movieInfoSynopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="0.5dp"
                android:textSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/dir_act"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/dir"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movieInfoDirector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/act"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movieInfoActor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17dp" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:paddingTop="10dp"
                    android:text="@string/simple_review"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/gotoWrite2"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:background="@drawable/ic_review_selected" />

                <Button
                    android:id="@+id/gotoWrite1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="#ffffff"
                    android:text="@string/review_write"
                    android:textColor="#B64D2E"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </LinearLayout>

                <ListView
                    android:id="@+id/listView"
                    android:layout_width="match_parent"
                    android:layout_height="400dp" />

            <Button
                android:id="@+id/seeAllReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/border"
                android:text="@string/see_all_review"
                android:textColor="@android:color/holo_purple"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#ffffff"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <ImageButton
                android:id="@+id/facebookLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_facebook"
                android:src="@drawable/ic_facebook" />

            <ImageButton
                android:id="@+id/kaKaoLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_kakao"
                android:src="@drawable/ic_kakao" />

            <Button
                android:id="@+id/reservate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:background="#B64D2E"
                android:text="@string/go_to_reserv"
                android:textColor="#ffffff"
                android:textSize="15dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>